1.4.0-vcli-alpha Sara

* Fix to make sure that tests also pass on a MS Windows platform

* Added abort link on the HTML list running flow interface

* Added an empty constructor to the Meandre Proxy by Amit's request

* Added the avility to pass a port number and a base directory to the infrastructure
  bootstrapper.
  
* The infrastructure looks for a file called meandre-default-locations.txt. Each
  line is a location and this set of locations are added to any newly created user.
  
* Reenabled the global file share on the WebUIs (disabled by Amit's changes)

* Added the option to select the port number from the command line on the MAUExecutor

* The conductor class loader now makes sure only directories and jar files are 
  passed as locations to pull classes from.
  
* Added a html face to the component and flow descriptors

* All the jars when a location is add are now being pulled down to the public resources directory

* Added a simple service to shutdown the server at /services/server/shutdown.html (as 
  usual it also supports txt, json, and xml calls)
  
* Added a check to make sure that the add to repository won't corrupt the repository

* Fix to the execute servlet flow services that did not execute when a token was provided.

* Added patches to the Meandre Client and Meandre Admin Client provided by Amit. 
  Patches add:
  	- Capability to get a componet description
  	- Get the component jar info
  	- Get the server version
  	- Ping the server
  	- Return the plugin information in JSON format 
 
* Added the following entries to the returned information 'meandre_uri', 'meandre_uri_name', 
  'description' to both, components and flow calls (see the html interface for mer details).
  
* Bug fix to the upload repository service (reading from the same input stream multiple times)

* Added the proxied url to the execute services execute_url and list_running_flows

* Added a call that returns the proxied url on the component context properties
