@@ -3,7 +3,6 @@ package org.meandre.webui;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.net.URL;
 import java.util.LinkedList;
 import java.util.List;
 
